Updates to allow jar execution